# modbus-pp

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  build_docs.sh  build_docusaurus.js
.github/workflows/: ci.yml  deploy.yml
benchmarks/: CMakeLists.txt  bm_batch_vs_individual.cpp  bm_hmac_overhead.cpp  bm_pdu_serialize.cpp  bm_pipeline_vs_sequential.cpp  bm_type_codec.cpp
cmake/: FetchDependencies.cmake  ModbusPPConfig.cmake.in
docusaurus/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docusaurus/docs/: benchmarks.md  faq.md  glossary.md  license.md
docusaurus/docs/api/: client-server-facades.md  core-module.md  discovery-module.md  index.md  pipeline-module.md  pubsub-module.md  register-map-module.md  security-module.md  transport-module.md
docusaurus/docs/architecture/: design-patterns.md  error-handling.md  module-structure.md  overview.md  transport-abstraction.md  wire-format.md
docusaurus/docs/concepts/: design-philosophy.md  modbus-fundamentals.md  module-tour.md  overview.md  problems-solved.md
docusaurus/docs/examples/: basic-client-server.md  endian-byte-orders.md  failure-propagation.md  pipeline-throughput.md  pubsub-events.md  security-authentication.md  typed-registers-example.md
docusaurus/docs/features/: batch-operations.md  byte-order-safety.md  discovery.md  overview.md  pipelining.md  pubsub.md  security-hmac.md  typed-registers.md
docusaurus/docs/quick-start/: hello-world.md  installation.md  introduction.md  next-steps.md
docusaurus/docs/testing/: overview.md  test-coverage.md
docusaurus/src/css/: custom.css
docusaurus/src/pages/: index.js  index.module.css
examples/: 01_basic_client_server.cpp  02_typed_registers.cpp  03_batch_operations.cpp  04_pipeline_throughput.cpp  05_pubsub_events.cpp  06_security_hmac.cpp  07_endian_byte_orders.cpp  CMakeLists.txt
include/modbus_pp/: modbus_pp.hpp
include/modbus_pp/client/: client.hpp  server.hpp
include/modbus_pp/core/: endian.hpp  error.hpp  function_codes.hpp  pdu.hpp  result.hpp  timestamp.hpp  types.hpp
include/modbus_pp/discovery/: device_info.hpp  scanner.hpp
include/modbus_pp/pipeline/: correlation_id.hpp  pipeline.hpp  request_queue.hpp
include/modbus_pp/pubsub/: publisher.hpp  subscriber.hpp  subscription.hpp
include/modbus_pp/register_map/: batch_request.hpp  register_descriptor.hpp  register_map.hpp  type_codec.hpp
include/modbus_pp/security/: credential_store.hpp  hmac_auth.hpp  session.hpp
include/modbus_pp/transport/: frame_codec.hpp  loopback_transport.hpp  rtu_transport.hpp  tcp_transport.hpp  transport.hpp
scripts/: generate_diagrams.py
src/: CMakeLists.txt
src/client/: client.cpp  server.cpp
src/core/: error.cpp  pdu.cpp  timestamp.cpp
src/discovery/: scanner.cpp
src/pipeline/: pipeline.cpp
src/pubsub/: publisher.cpp  subscriber.cpp
src/security/: hmac_auth.cpp  session.cpp
src/transport/: frame_codec.cpp  loopback_transport.cpp  rtu_transport.cpp  tcp_transport.cpp
tests/integration/: CMakeLists.txt  test_client_server.cpp  test_loopback_roundtrip.cpp
tests/unit/: CMakeLists.txt  test_batch_request.cpp  test_endian.cpp  test_error.cpp  test_frame_codec.cpp  test_hmac_auth.cpp  test_pdu.cpp  test_pipeline.cpp  test_pubsub.cpp  test_register_map.cpp  test_timestamp.cpp  test_type_codec.cpp  test_types.cpp
